--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
+    "axios": "^0.21.1",
     "gql": "^1.1.2",
     "graphql": "^15.5.1",
     "react": "^17.0.2",
