--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/tedious": "^4.0.5",
     "axios": "^0.21.1",
+    "formik": "^2.2.9",
     "gql": "^1.1.2",
     "graphql": "^15.5.1",
     "mssql": "^7.2.1",
